[package]
name = "moq-transport-generic"
description = "Media over QUIC"
authors = [ "Luke Curley" ]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = [ "quic", "http3", "webtransport", "media", "live" ]
categories = [ "multimedia", "network-programming", "web-programming" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
thiserror = "1.0.21"
log = "0.4"
anyhow = "1.0.70"

moq-transport = { path = "../moq-transport" }
moq-transport-quinn = { path = "../moq-transport-quinn" }
moq-transport-quiche = { path = "../moq-transport-quiche" }

tokio = { version = "1.27", features = ["macros"] }

# quinn stuff
quinn = "0.10"
ring = "0.16.20"
rustls = "0.21.2"
rustls-pemfile = "1.0.2"
